--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ regex = "1"
 csv = "1.1"
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.11.14"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
+syn = "1.0.107"
