--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "scrape_tribes_directory"
+name = "tgd"
 version = "0.1.0"
 edition = "2021"
+author = "Adam Recvlohe"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,9 +10,11 @@ edition = "2021"
 select = "0.5.0"
 scraper = "0.12.0"
 regex = "1"
-csv = "1.1"
+csv = "1.2"
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.11.14"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 syn = "1.0.107"
+clap = { version = "4.4.2", features = ["derive"] }
+cli-table = "0.4.7"
