--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [package]
 name = "tgd"
+description = "A cli to search, query, and filter a tribal government directory"
+homepage = "https://github.com/nativesintech/tribal_government_directory"
+repository = "https://github.com/nativesintech/tribal_government_directory"
+readme = "./README.md"
+documentation = "https://docs.rs/tgd"
+keywords = "natives in tech,indigenous,indigenous tech, native tech"
 version = "0.1.0"
 edition = "2021"
 
