--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["natives in tech", "indigenous", "indigenous tech", "native tech"]
 license = "GNU GENERAL PUBLIC LICENSE"
 version = "0.1.0"
 edition = "2021"
-exclude = ["tribes.json", "broken-sites.txt"]
+exclude = ["tribes.json", "broken-sites.txt", "tests/**/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
