--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ homepage = "https://github.com/nativesintech/tribal_government_directory"
 repository = "https://github.com/nativesintech/tribal_government_directory"
 readme = "./README.md"
 documentation = "https://docs.rs/tgd"
-keywords = ["natives in tech", "indigenous", "indigenous tech", "native tech"]
+keywords = ["natives-in-tech", "indigenous", "indigenous-tech", "native-tech"]
 license = "GNU GENERAL PUBLIC LICENSE"
 version = "0.1.0"
 edition = "2021"
